<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Business Inventory</string>

    <string name="btn_serch">Search</string>
    <string name="btn_summary">Summary</string>
    <string name="btn_export">Export</string>

    <string name="title_fragment_export">Export fragment</string>
    <string name="title_fragment_search">Search fragment</string>
    <string name="title_fragment_summary">Summary fragment</string>

    <string name="view_cost">Cost:</string>
    <string name="view_rem">Rem:</string>
    <string name="view_recv">Recv\'d:</string>

    <string name="list_item_text_cost_item">US$ %s</string>
    <string name="list_item_text_rem_item">%.2f of %.2f</string>
    <string name="title_activity_add_item">Add Item</string>

    <string name="btn_back">Back</string>
    <string name="view_title">Inventory Summary</string>
    <string name="btn_delete">Delete</string>
    <string name="text_view_name">Inventory Name</string>
    <string name="text_view_place">Place</string>
    <string name="text_view_description">Description</string>
    <string name="text_view_type">Type</string>
    <string name="text_view_date">Date</string>
    <string name="text_view_barcode">Barcode</string>
    <string name="text_view_bought_no">Bought No.</string>
    <string name="text_view_sold">Sold No</string>
    <string name="text_view_unid_buy_price">Unid Buy Price US$</string>
    <string name="text_view_unid_sell_price">Unid Sell Price US$</string>
    <string name="text_view_total_cost">Total Cost US$</string>
    <string name="text_view_total_received">Total Received US$</string>
    <string name="text_view_total_profit">Total Profit US$</string>
    <string name="text_view_photo">Photo</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="btn_save_detail">Save</string>

    <string name="error_message">Empty Field</string>

    <string name="txt_view_current_us">Current Inventory US$</string>
    <string name="txt_view_current_no">Current Inventory US#</string>
    <string name="txt_view_inventory_sold">Inventory Sold #</string>
    <string name="txt_view_profit_margin">Profit Margin %</string>
    <string name="txt_view_accum_profits_us">Accum. Profits US$</string>
    <string name="txt_view_net_profit_us">Net Profit US$</string>
    <string name="txt_view_total_bought_us">Total Bought US$</string>
    <string name="txt_view_total_sold_us">Total Sold US$</string>

    <string name="dialog_detail_yes">Yes</string>
    <string name="dialog_detail_no">No</string>
    <string name="dialog_detail_cancel">Cancel</string>
    <string name="dialog_detail_title">"Really Exit?"</string>
    <string name="dialog_detail_message">"Could lose information.\nAre you sure you want to exit?"</string>

    <string name="dialog_delete_item_yes">Yes</string>
    <string name="dialog_delete_item_no">No</string>
    <string name="dialog_delete_item_cancel">Cancel</string>
    <string name="dialog_delete_item_title">"Really Delete?"</string>
    <string name="dialog_delete_item_message">"Are you sure to delete this?"</string>

    <string name="main_menu_search_by_name">Search by Name</string>

    <string name="title_export_excel">Export to EXCEL</string>
    <string name="search_hint">Search Items</string>
</resources>
